fix cropped number in the badges.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@11500 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_sidebar.scss
+++ b/src/main/resources/scss/_sidebar.scss
@@ -58,6 +58,8 @@
 				color: #d9d9d9;
 				font-style: italic;
 				z-index: 1;
+				padding-left: 0;
+				padding-right: 5px;
 			}
 		}
 	}
